# rl-repo

./: .gitignore  README.md  __init__.py  gradfile  pyproject.toml  requirements.txt  requirements.yml  setup.cfg
analysis/: average_final_fidelity.ipynb  default_noise_effect.py  element_error.py  load_env_data.py  load_random_fidelity.py  noise_effect.py  random_action_fidelity.py  random_action_unitaries.ipynb  sampled_noise_effect.py  u_target_performance.ipynb  u_target_performance.py  verify_results.ipynb  visualize_actions.ipynb
api/: __init__.py  agent_api.py  training.py
docker/: Dockerfile  docker_entry_script.sh  launch_docker.sh
docker-conda/: Dockerfile  Dockerfile_old  docker_entry_script.sh  launch_docker.sh
examples/: dd_q_learning.py  deep_q_learning.py  generate_random_gates.py  gym_intro.py  hyperparameter_tuning.py  load_hpt_into_model.py  noise_hpt.py  noisy_hpt.py  q_learning.py  train_models.py  train_rllibmodel.py  two_qubit_hpt.py
models/: __init__.py  agents.py
quantum_noise_data/: get_data.py
results/: analyze_data.py
rllib_demo/: README.md  ddpg_pendulum.py
scripts/: IBM_T1_T2_H_gate.py  IBM_noise.py  baseline.py  best_fidelities.txt  change_target_and_inference.py  changing_gate.py  custom_logging.py  deterministic_agent.py  error_testing.py  gaussianDetuningOptForH.py  hyperparameterTune.py  inference_multiple_noise_parameters.py  inferencing.py  learn_abitrary_gate.py  learn_arbitrary_gate.py  learning_H_gate.py  learning_other_gates.py  learning_other_gates_noiseless.py  multiple_relaxation_rates.py  random_actions.py  (+7 more)
(+198 files in other folders)
