[tool.poetry]
name = "relaqs"
version = "0.0.1"
description = "A package that applies deep reinforcement learning for quantum computing"
authors = ["Amara Katabarwa"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
keras = "^2.12.0"
stable-baselines3 = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
