[metadata]
name = relaqs
version = 0.0.1

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >3.6, <4
install_requires = 
    ray[rllib]
    ray[tune]
    matplotlib
    qutip
    torch
    tensorboard

[options.packages.find]
where = src
   
[options.package_data]
mypkg = 
    *.json
 
[bdist_wheel]
universal = 1


