[metadata]
name = relaqs
version = 0.0.1

[options]
packages = find_namespace:
package_dir =
    =src
python_requires = >3.6, <4
install_requires = 
    ray<2.8.0
    ray[rllib]
    ray[tune]
    matplotlib
    qutip
    torch
    tensorboard


[options.packages.find]
where = src

[options.package_data]
* = *.json
    
[bdist_wheel]
universal = 1


